--- a/client/views/teams.html
+++ b/client/views/teams.html
@@ -4,7 +4,7 @@
     <form class="create-team">
       <input type="text" name="name">
       <button type="submit">Submit</button>
-      <a href="#" class="cancel">Cancel</a>    
+      <a href="#" class="cancel">Cancel</a>
     </form>
   {{else}}
     <a href="#" class="create">Create</a>
@@ -12,7 +12,7 @@
 
   <ul>
     {{#each teams}}
-      <li>{{name}}</li>
+      <li>{{name}} <a href="#" class="remove">(x)</a></li>
     {{/each}}
   </ul>
 </template>
