refactor tempates code

--- a/client/views/teams.html
+++ b/client/views/teams.html
@@ -12,7 +12,7 @@
 
   <ul>
     {{#each teams}}
-      <li>{{name}} <a href="#" class="remove">(x)</a></li>
+      {{> team}}
     {{/each}}
   </ul>
 </template>
