--- a/client/views/team.html
+++ b/client/views/team.html
@@ -1,3 +1,15 @@
 <template name="team">
-  <li>{{name}} <a href="#" class="remove">(x)</a></li>
+  <li>
+    {{#if isEditingTeam}}
+      <form class="form-edit">
+        <input type="text" name="name" value="{{name}}">
+        <button type="submit">Submit</button>
+        <a href="#" class="cancel">Cancel</a>
+      </form>
+    {{else}}
+      {{name}}
+      <a href="#" class="edit">edit</a>
+      <a href="#" class="remove"> (x)</a>
+    {{/if}}
+  </li>
 </template>
