--- a/client/views/game.html
+++ b/client/views/game.html
@@ -1,7 +1,26 @@
 <template name="game">
   <li>
-    {{teams.[0].name}}
-    vs
-    {{teams.[1].name}}
+    {{#if completed}}
+
+      {{teams.[0].name}} ({{teams.[0].score}})
+      vs
+      {{teams.[1].name}} ({{teams.[1].score}})
+
+    {{else}}
+
+      {{teams.[0].name}}
+      (<a href="#" class="one-minus">-</a>
+      {{teams.[0].score}}
+      <a href="#" class="one-plus">+</a>)
+      vs
+      {{teams.[1].name}}
+      (<a href="#" class="two-minus">-</a>
+      {{teams.[1].score}}
+      <a href="#" class="two-plus">+</a>)
+
+      <a href="#" class="finish-game">Finish</a>
+
+      <a href="#" class="delete-game">Delete</a>
+    {{/if}}
   </li>
 </template>
