--- a/client/views/game.html
+++ b/client/views/game.html
@@ -9,14 +9,14 @@
     {{else}}
 
       {{teams.[0].name}}
-      (<a href="#" class="one-minus">-</a>
+      (<a href="#" class="score" data-inc="-1" data-index="0">-</a>
       {{teams.[0].score}}
-      <a href="#" class="one-plus">+</a>)
+      <a href="#" class="score" data-inc="1" data-index="0">+</a>)
       vs
       {{teams.[1].name}}
-      (<a href="#" class="two-minus">-</a>
+      (<a href="#" class="score" data-inc="-1" data-index="1">-</a>
       {{teams.[1].score}}
-      <a href="#" class="two-plus">+</a>)
+      <a href="#" class="score" data-inc="1" data-index="1">+</a>)
 
       <a href="#" class="finish-game">Finish</a>
 
